--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pingleware/bestbooks-mailer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "The mailer component for BestBooks Accounting Application Framework",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
   "dependencies": {
     "@pingleware/bestbooks-core": "^1.1.13",
     "dns": "^0.2.2",
+    "node-mailin": "^2.5.0",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
