--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@pingleware/bestbooks-mailer",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "The mailer component for BestBooks Accounting Application Framework",
   "main": "index.js",
+  "build": {
+    "files": [
+      "resolve.pl"
+    ]
+  },
   "scripts": {
     "test": "mocha"
   },
@@ -27,12 +32,6 @@
   },
   "engineStrict": true,
   "dependencies": {
-    "@pingleware/bestbooks-core": "^1.1.18",
-    "dns": "^0.2.2",
-    "node-mailin": "^2.5.0",
-    "nodemailer": "^6.9.1"
-  },
-  "devDependencies": {
-    "mocha": "^10.2.0"
+    "@pingleware/bestbooks-core": "^1.1.18"
   }
 }
